# library-management-system

./: CMakeLists.txt  README.md  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.ui  widget.cpp  widget.h  widget.ui
resources/: resources.qrc
